--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
@@ -7,6 +7,7 @@
 		
 		<title>Missing Child Identification</title>
 		<!-- Loading third party fonts -->
+		<link rel="stylesheet" href="style.css">
 
 		<link href="{{ url_for('static',filename='fonts/font-awesome.min.css')}}" rel="stylesheet" type="text/css">
 		<!-- Loading main css file -->
